tools/common/errors/tests/mod.rs
//! Tests for the errors module
//!
//! This module contains tests for the errors in the common errors library.

// Helper module for re-exporting common-errors items
#[allow(unused_imports)]
pub mod helpers;

// Unit tests
pub mod unit;

// Integration tests (can be added when needed)
pub mod integration;

// Property-based tests (can be added when needed)
pub mod property;
